# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  debug.sh
dependencies/include/: stb_image.hpp
dependencies/include/glad/: glad.h
include/: Camera.hpp  Glfw.hpp  Image.hpp  IndexBuffer.hpp  Init.hpp  Keyboard.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Glfw.cpp  Image.cpp  IndexBuffer.cpp  Init.cpp  Keyboard.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp  vertices.cpp
src/dependencies/: glad.cpp
